Modularizing (#20)
Signed-off-by: Laird Nelson <ljnelson@gmail.com>